--- a/sourcecode/jovian-sourcecode-deployment.yaml
+++ b/sourcecode/jovian-sourcecode-deployment.yaml
@@ -47,4 +47,4 @@ spec:
       volumes:
         - name: data
           persistentVolumeClaim:
-            claimName: sourcecode-pvc
+            claimName: jovian-sourcecode-pvc
