--- a/sourcecode/jovian-sourcecode-pvc.yaml
+++ b/sourcecode/jovian-sourcecode-pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: sourcecode-pvc
+  name: jovian-sourcecode-pvc
 spec:
   resources:
     requests:
