--- a/pipeline/installation-job/jovian-pipeline-head-pvc.yaml
+++ b/pipeline/installation-job/jovian-pipeline-head-pvc.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: jovian-pipeline-pvc
+  name: jovian-pipeline-head-pvc
 spec:
   resources:
     requests:
-      storage: 1Gi
+      storage: 5Gi
   accessModes:
     - ReadWriteMany
