--- a/inputdata/jovian-inputdata-pvc+cronjob.yaml
+++ b/inputdata/jovian-inputdata-pvc+cronjob.yaml
@@ -20,7 +20,7 @@ spec:
   jobTemplate:
     metadata:
       labels:
-        ms: inputdata-cronjob
+        ms: jovian-inputdata-cronjob
     spec:
       restartPolicy: OnFailure
       containers:
