--- a/sample_status_db/jovian-sample-status-db-svc+pvc+deployment.yaml
+++ b/sample_status_db/jovian-sample-status-db-svc+pvc+deployment.yaml
@@ -1,20 +1,20 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: sample-status-db-svc
+  name: jovian-sample-status-db-svc
 spec:
   ports:
   - port: 27017
     targetPort: 27017
   selector:
-    app: sample-status
+    ms: jovian-sample-status
 
 ---
 
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: sample-status-db-pvc
+  name: jovian-sample-status-db-pvc
 spec:
   resources:
     requests:
@@ -27,16 +27,16 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: sample-status-db-deployment
+  name: jovian-sample-status-db-deployment
 spec:
   selector:
     matchLabels:
-      app: sample-status
+      ms: jovian-sample-status
   replicas: 1
   template:
     metadata:
       labels:
-        app: sample-status
+        ms: jovian-sample-status
     spec:
       containers:
       - name: mongodb
@@ -49,4 +49,4 @@ spec:
       volumes:
         - name: data
           persistentVolumeClaim:
-            claimName: sample-status-db-pvc
+            claimName: jovian-sample-status-db-pvc
