--- a/submission/Dockerfile
+++ b/submission/Dockerfile
@@ -1,4 +1,4 @@
 FROM continuumio/miniconda3
-RUN pip install lxml
+RUN pip install lxml; pip install pymongo
 ADD *.py /
 ENTRYPOINT ["python", "submit_data_to_ena.py"]
