--- a/samples-logs/package.json
+++ b/samples-logs/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~8.2.11",
     "bootstrap": "^4.4.1",
     "jquery": "^3.5.0",
+    "ngx-pagination": "^5.0.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
