--- a/sourcecode/jovian-sourcecode-pvc.yaml
+++ b/sourcecode/jovian-sourcecode-pvc.yaml
@@ -5,6 +5,7 @@ metadata:
 spec:
   resources:
     requests:
-      storage: 1Gi
+      storage: 250Gi
+  storageClassName: nfs-client
   accessModes:
     - ReadWriteMany
