--- a/databases/job/Dockerfile
+++ b/databases/job/Dockerfile
@@ -1,3 +1,4 @@
 FROM continuumio/miniconda3
+RUN apt-get update; apt-get -y install curl
 ADD install_databases.sh /install_databases.sh
 ENTRYPOINT ["bash", "install_databases.sh"]
