--- a/databases/cronjob/Dockerfile
+++ b/databases/cronjob/Dockerfile
@@ -1,3 +1,4 @@
 FROM continuumio/miniconda3
+RUN apt-get update; apt-get -y install curl
 ADD update_databases.sh /update_databases.sh
 ENTRYPOINT ["bash", "update_databases.sh"]
