--- a/inputdata/jovian-inputdata-pvc+cronjob.yaml
+++ b/inputdata/jovian-inputdata-pvc+cronjob.yaml
@@ -5,7 +5,8 @@ metadata:
 spec:
   resources:
     requests:
-      storage: 1Gi
+      storage: 200Gi
+  storageClassName: nfs-client
   accessModes:
   - ReadWriteMany
 
