--- a/pipeline/run_pipeline-job/jovian-pipeline-run-job.yaml
+++ b/pipeline/run_pipeline-job/jovian-pipeline-run-job.yaml
@@ -12,6 +12,13 @@ spec:
       containers:
       - name: main
         image: alexeyebi/jovian-pipeline-run-job
+        resources:
+          limits:
+            cpu: "19"
+            memory: "90Gi"
+          requests:
+            cpu: "19"
+            memory: "90Gi"
         volumeMounts:
           - name: sourcecode
             mountPath: /git
