--- a/samples-logs-front-end/samples-logs-svc.yaml
+++ b/samples-logs-front-end/samples-logs-svc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: samples-logs-svc
+  name: samples-logs-front-end-svc
 spec:
   ports:
   - port: 80
