--- a/samples-logs-back-end/samples-logs-back-end-svc+deployment.yaml
+++ b/samples-logs-back-end/samples-logs-back-end-svc+deployment.yaml
@@ -1,3 +1,17 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: samples-logs-back-end-svc
+spec:
+  ports:
+  - port: 80
+    protocol: TCP
+    targetPort: 80
+  selector:
+    ms: samples-logs-back-end
+
+---
+
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
