Adding config files for ont pipeline

--- a/ont-pipeline/nextflow.config
+++ b/ont-pipeline/nextflow.config
@@ -3,6 +3,6 @@ process {
 }
 
 k8s {
-   storageClaimName = 'jovian-outputdata-pvc'
-   storageMountPath = '/output'
+   storageClaimName = 'ont-data-pvc'
+   storageMountPath = '/data'
 }
