--- a/ont-pipeline/Dockerfile
+++ b/ont-pipeline/Dockerfile
@@ -1,3 +1,4 @@
 FROM nextflow/nextflow
 ADD nextflow.config /nextflow.config
+ADD run_ont_pipeline.sh /run_ont_pipeline.sh
 ENTRYPOINT ["bash", "run_ont_pipeline.sh"]
