added job and cronjob (testing)

--- a/samples-cleanup/cron/sample-cleanup-ont-job.yml
+++ b/samples-cleanup/cron/sample-cleanup-ont-job.yml
@@ -1,9 +1,10 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: samples-cleanup-ont
+  name: samples-cleanup
 spec:
-  template:
+  # schedule: "0 0 * * *"
+  jobTemplate:
     metadata:
       labels:
         ms: samples-cleanup-ont
@@ -11,14 +12,21 @@ spec:
       restartPolicy: OnFailure
       containers:
       - name: main
-        image: ctr26/samples-cleanup-cron:latest
-        args: ["--ont", "--verbose"]
-        # image: hello-world
-        imagePullPolicy: Always
+        image: ctr26/samples-cleanup
+        args: ["samples-cleanup --dryrun --ont --verbose"]
         volumeMounts:
           - name: data
             mountPath: /data
+          - name: wms
+            mountPath: /wms
       volumes:
         - name: data
           persistentVolumeClaim:
             claimName: ont-data-pvc
+        - name: wms
+          persistentVolumeClaim:
+            claimName: ena-wms-pvc
+        # - name: data
+        #   persistentVolumeClaim:
+        #     claimName: jovian-inputdata-pvc
+
