--- a/samples-cleanup/cron/sample-cleanup-ont-job.yml
+++ b/samples-cleanup/cron/sample-cleanup-ont-job.yml
@@ -4,7 +4,7 @@ metadata:
   name: samples-cleanup
 spec:
   # schedule: "0 0 * * *"
-  jobTemplate:
+  template:
     metadata:
       labels:
         ms: samples-cleanup-ont
