--- a/samples-cleanup/cron/sample-cleanup-ont-job-dry.yml
+++ b/samples-cleanup/cron/sample-cleanup-ont-job-dry.yml
@@ -1,18 +1,18 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: samples-cleanup-ont
+  name: samples-cleanup-ont-dry
 spec:
   template:
     metadata:
       labels:
-        ms: samples-cleanup-ont
+        ms: samples-cleanup-ont-dry
     spec:
       restartPolicy: OnFailure
       containers:
       - name: main
         image: ctr26/samples-cleanup-cron:latest
-        args: ["--ont", "--verbose"]
+        args: ["--dryrun", "--ont", "--verbose"]
         # image: hello-world
         imagePullPolicy: Always
         volumeMounts:
