--- a/samples-cleanup/cron/sample-cleanup-jovian-job-dry.yml
+++ b/samples-cleanup/cron/sample-cleanup-jovian-job-dry.yml
@@ -1,18 +1,18 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: samples-cleanup-ont
+  name: samples-cleanup-jovian-dry
 spec:
   template:
     metadata:
       labels:
-        ms: samples-cleanup-ont
+        ms: samples-cleanup-jovian-dry
     spec:
       restartPolicy: OnFailure
       containers:
       - name: main
         image: ctr26/samples-cleanup-cron:latest
-        args: ["--ont", "--verbose"]
+        args: ["--dryrun", "--jovian", "--verbose"]
         # image: hello-world
         imagePullPolicy: Always
         volumeMounts:
@@ -21,4 +21,4 @@ spec:
       volumes:
         - name: data
           persistentVolumeClaim:
-            claimName: ont-data-pvc
+            claimName: jovian-inputdata-pvc
