--- a/k8s-api/Dockerfile
+++ b/k8s-api/Dockerfile
@@ -1,9 +1,11 @@
-FROM python:3
+FROM tiangolo/uwsgi-nginx-flask:python3.7
 
-WORKDIR /usr/src/app
+# WORKDIR /usr/src/app
 
 COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
+
+COPY ./app /app
 
 COPY . .
 
@@ -11,5 +13,5 @@ COPY . .
 
 # CMD ["/bin/bash"]
 
-ENTRYPOINT [ "python", "k8s-api.py" ]
-CMD [ "python", "k8s-api.py"]
+# ENTRYPOINT [ "python", "k8s-api.py" ]
+# CMD [ "python", "k8s-api.py"]
