--- a/arctic-illumina-inputdata/artic-illumina-data-pvc.yaml
+++ b/arctic-illumina-inputdata/artic-illumina-data-pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: artic-ont-data-pvc
+  name: artic-illumina-data-pvc
 spec:
   resources:
     requests:
