Refactor api calls

--- a/samples-logs-front-end/tsconfig.json
+++ b/samples-logs-front-end/tsconfig.json
@@ -10,6 +10,9 @@
     "module": "esnext",
     "moduleResolution": "node",
     "importHelpers": true,
+    "paths": {
+      "@services/*": ["src/app/services/*"],
+    },
     "target": "es2015",
     "typeRoots": [
       "node_modules/@types"
