--- a/samples-logs-front-end/tsconfig.json
+++ b/samples-logs-front-end/tsconfig.json
@@ -13,6 +13,8 @@
     "paths": {
       "@services/*": ["src/app/services/*"],
     },
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
     "target": "es2015",
     "typeRoots": [
       "node_modules/@types"
