--- a/samples-logs-front-end/package.json
+++ b/samples-logs-front-end/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^4.4.1",
     "jquery": "^3.5.0",
     "ngx-pagination": "^5.0.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
