--- a/jovian-pipeline-reference-alignment/jovian-pipeline-reference-alignment-run-job.yaml
+++ b/jovian-pipeline-reference-alignment/jovian-pipeline-reference-alignment-run-job.yaml
@@ -12,6 +12,7 @@ spec:
       containers:
       - name: main
         image: alexeyebi/jovian-pipeline-reference-alignment-run-job
+        args: ["jovian-pipeline-reference-alignment-run-job"]
         resources:
           limits:
             cpu: "19"
