Changing pvc for inputdata

--- a/jovian-pipeline-reference-alignment/jovian-pipeline-reference-alignment-run-job.yaml
+++ b/jovian-pipeline-reference-alignment/jovian-pipeline-reference-alignment-run-job.yaml
@@ -40,7 +40,7 @@ spec:
             claimName: jovian-databases-pvc
         - name: data
           persistentVolumeClaim:
-            claimName: jovian-inputdata-pvc
+            claimName: jovian-inputdata-pvc2
         - name: results
           persistentVolumeClaim:
             claimName: jovian-outputdata-pvc-new2
