Updating pvc for vcf pipeline

--- a/vcf-pipeline/nextflow.config
+++ b/vcf-pipeline/nextflow.config
@@ -3,7 +3,7 @@ process {
 }
 
 k8s {
-   storageClaimName = 'sars-cov2-sequence-analysis-pvc'
+   storageClaimName = 'jovian-inputdata-pvc'
    storageMountPath = '/data'
-   pod = [runAsUser: 0]
+   pod = [[runAsUser: 0], [imagePullSecret: 'regcred']]
 }
