--- a/vcf-pipeline/vcf-pipeline-run-job.yaml
+++ b/vcf-pipeline/vcf-pipeline-run-job.yaml
@@ -20,10 +20,12 @@ spec:
             mountPath: /data
           - name: sourcecode
             mountPath: /git
+      imagePullSecrets:
+        - name: regcred
       volumes:
         - name: data
           persistentVolumeClaim:
-            claimName: sars-cov2-sequence-analysis-pvc
+            claimName: jovian-inputdata-pvc
         - name: sourcecode
           persistentVolumeClaim:
             claimName: vcf-sourcecode-pvc
