--- a/vcf-pipeline/Dockerfile
+++ b/vcf-pipeline/Dockerfile
@@ -1,5 +1,4 @@
 FROM nextflow/nextflow
 ADD nextflow.config /nextflow.config
 ADD run_vcf_pipeline.sh /run_vcf_pipeline.sh
-#ENTRYPOINT ["bash", "run_vcf_pipeline.sh"]
-ENTRYPOINT ["sleep", "9999999999"]
+ENTRYPOINT ["bash", "run_vcf_pipeline.sh"]
