Adding priority class to jovian ra

--- a/jovian-pipeline-reference-alignment/jovian-pipeline-reference-alignment-run-job.yaml
+++ b/jovian-pipeline-reference-alignment/jovian-pipeline-reference-alignment-run-job.yaml
@@ -9,6 +9,7 @@ spec:
         ms: jovian-pipeline-run-job
     spec:
       restartPolicy: Never
+      priorityClassName: high-priority-nonpreempting
       nodeSelector:
         analysis: jovian
       containers:
