Adding image secret

--- a/jovian-pipeline-reference-alignment/jovian-pipeline-reference-alignment-run-job.yaml
+++ b/jovian-pipeline-reference-alignment/jovian-pipeline-reference-alignment-run-job.yaml
@@ -34,6 +34,8 @@ spec:
             mountPath: /output
           - name: wms
             mountPath: /wms
+      imagePullSecrets:
+        - name: regcred
       volumes:
         - name: sourcecode
           persistentVolumeClaim:
