--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,31 +1,42 @@
-# stages:
-#   - setup
-#   - deploy_images
-#   - staging
-#   - approval
-#   - production
+variables:
+  SSL_CERT_DIR: ''
+  # DOCKER_HOST: tcp://docker:2375
+  DOCKER_TLS_CERTDIR: ''
 
-image: docker
+# services:
+#   - docker:19.03.0-dind
 
-# variables:
-#   DOCKER_DRIVER: overlay2
-#   DOCKER_TLS_CERTDIR: ""
+stages:
+  - debug
+  - setup
+  - deploy_images
+  # - production
 
-services:
-  - docker:19.03.0-dind
-
-deploy-images-master:
-  stage: deploy
-  image: docker/compose
-  # environment: prod
-  before_script:
-  # - docker info
-  # - echo -n $CI_JOB_TOKEN | docker login -u gitlab-ci-token --password-stdin $CI_REGISTRY
-    - docker login dockerhub.ebi.ac.uk -u $SECRET_GITLAB_DEPLOY_USER_K8S -p $SECRET_GITLAB_DEPLOY_TOKEN_K8S 
+debug:
+  stage: debug
   script:
+    - export
+    
+setup:
+  stage: setup
+  image: docker
+  services:
+  - name: docker:19.03.0-dind
+  script:
+    - docker login "$CI_REGISTRY" -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD"
+
+deploy_images:
+  stage: deploy_images
+  image: docker/compose
+  script:
+    - docker login "$CI_REGISTRY" -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" 
     - docker-compose build
     - docker-compose push
-    # - docker push "$CI_REGISTRY_IMAGE:$CI_COMMIT_SHORT_SHA"
+  # except:
+  # - "master"
 
-
-  
+# production:
+#   stage: production
+#   script:
+#   only:
+#   - "master"
