Adding worker to vcf-pipeline

--- a/vcf-pipeline/Dockerfile
+++ b/vcf-pipeline/Dockerfile
@@ -1,4 +1,9 @@
-FROM nextflow/nextflow
-ADD nextflow.config /nextflow.config
-ADD run_vcf_pipeline.sh /run_vcf_pipeline.sh
-ENTRYPOINT ["bash", "run_vcf_pipeline.sh"]
+FROM openjdk:slim
+COPY --from=python / /
+RUN wget -qO- https://get.nextflow.io | bash
+RUN pip install pymongo redis
+COPY ./worker.py /worker.py
+COPY ./rediswq.py /rediswq.py
+COPY ./workflow.nf /workflow.nf
+COPY ./nextflow.config /nextflow.config
+ENTRYPOINT ["python", "worker.py"]
