--- a/vcf-pipeline/vcf-pipeline-run-job.yaml
+++ b/vcf-pipeline/vcf-pipeline-run-job.yaml
@@ -3,6 +3,7 @@ kind: Job
 metadata:
   name: vcf-pipeline-run-job
 spec:
+  parallelism: 50
   template:
     metadata:
       labels:
@@ -14,23 +15,17 @@ spec:
       containers:
       - image: alexeyebi/vcf-pipeline-run-job
         name: vcf-pipeline-run-job
-        args: ["ERR4164785"]
         volumeMounts:
           - name: data
             mountPath: /data
           - name: output
             mountPath: /output
-          - name: sourcecode
-            mountPath: /git
       imagePullSecrets:
         - name: regcred
       volumes:
         - name: data
           persistentVolumeClaim:
-            claimName: vcf-inputdata-pvc
-        - name: sourcecode
-          persistentVolumeClaim:
-            claimName: vcf-sourcecode-pvc
+            claimName: jovian-inputdata-pvc
         - name: output
           persistentVolumeClaim:
             claimName: vcf-pipeline-pvc
