Extract logging functions and refactor dockerfile

--- a/vcf-pipeline/Dockerfile
+++ b/vcf-pipeline/Dockerfile
@@ -1,9 +1,7 @@
 FROM openjdk:slim
 COPY --from=python / /
 RUN wget -qO- https://get.nextflow.io | bash
-RUN pip install pymongo redis
-COPY ./worker.py /worker.py
-COPY ./rediswq.py /rediswq.py
-COPY ./workflow.nf /workflow.nf
-COPY ./nextflow.config /nextflow.config
+COPY requirements.txt .
+RUN pip install -r requirements.txt
+COPY . .
 CMD ["python", "worker.py"]
